force-app/main/default/objects/PH_Contact__c/PH_Contact__c.object-meta.xml
<CustomObject>
    <label>PH_Contact</label>
    <nameField>
        <label>PH_Contact_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PH_Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>