force-app/main/default/objects/PH_Contact__c/fields/addr_city__c.field-meta.xml
<CustomField>
    <fullName>addr_city__c</fullName>
    <label>Addr_City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>