force-app/main/default/objects/PH_Contact__c/fields/addr_district__c.field-meta.xml
<CustomField>
    <fullName>addr_district__c</fullName>
    <label>Addr_District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>