force-app/main/default/objects/PH_Contact__c/fields/addr_stateorprovince__c.field-meta.xml
<CustomField>
    <fullName>addr_stateorprovince__c</fullName>
    <label>Addr_StateOrProvince</label>
    <length>100</length>
    <type>Text</type>
</CustomField>