force-app/main/default/objects/PH_Contact__c/fields/addr_streetline2__c.field-meta.xml
<CustomField>
    <fullName>addr_streetline2__c</fullName>
    <label>Addr_StreetLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>