force-app/main/default/objects/PH_Contact__c/fields/br_currbrandid__c.field-meta.xml
<CustomField>
    <fullName>br_currbrandid__c</fullName>
    <label>BR_CurrBrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>