force-app/main/default/objects/PH_Contact__c/fields/child_fullname__c.field-meta.xml
<CustomField>
    <fullName>child_fullname__c</fullName>
    <label>Child_FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>