force-app/main/default/objects/PH_Contact__c/fields/contact_firstname__c.field-meta.xml
<CustomField>
    <fullName>contact_firstname__c</fullName>
    <label>Contact_FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>