force-app/main/default/objects/PH_Contact__c/fields/contact_height__c.field-meta.xml
<CustomField>
    <fullName>contact_height__c</fullName>
    <label>Contact_Height</label>
    <length>30</length>
    <type>Text</type>
</CustomField>