force-app/main/default/objects/PH_Contact__c/fields/contact_maincondition__c.field-meta.xml
<CustomField>
    <fullName>contact_maincondition__c</fullName>
    <label>Contact_MainCondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>