force-app/main/default/objects/PH_Contact__c/fields/contact_salutation__c.field-meta.xml
<CustomField>
    <fullName>contact_salutation__c</fullName>
    <label>Contact_Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>