force-app/main/default/objects/PH_Contact__c/fields/contact_thirdpartyoptout__c.field-meta.xml
<CustomField>
    <fullName>contact_thirdpartyoptout__c</fullName>
    <label>Contact_ThirdPartyOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>