force-app/main/default/objects/PH_Contact__c/fields/contact_whatsappoptout__c.field-meta.xml
<CustomField>
    <fullName>contact_whatsappoptout__c</fullName>
    <label>Contact_WhatsappOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>