force-app/main/default/objects/PH_Contact__c/fields/cr_hcpclassification__c.field-meta.xml
<CustomField>
    <fullName>cr_hcpclassification__c</fullName>
    <label>CR_HCPClassification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>