force-app/main/default/objects/PH_Contact__c/fields/cr_supervisorname__c.field-meta.xml
<CustomField>
    <fullName>cr_supervisorname__c</fullName>
    <label>CR_SupervisorName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>