force-app/main/default/objects/PH_Contact__c/fields/member_startdate__c.field-meta.xml
<CustomField>
    <fullName>member_startdate__c</fullName>
    <label>Member_StartDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>