force-app/main/default/objects/PH_Contact__c/validationRules/Valid_MemberStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_MemberStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($User.LastName = &apos;Integration&apos;),NOT(Regex(  member_startdate__c ,&quot;^(3[01]|[12][0-9]|0[1-9])/(1[0-2]|0[1-9])/[0-9]{4}$&quot;)))</errorConditionFormula>
    <errorMessage>Member_StartDate__c column should be in dd/mm/yyyy date format.</errorMessage>
</ValidationRule>