force-app/main/default/objects/PH_Contact__c/validationRules/Valid_Relation_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Relation_Type</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;Lead&apos;, br_relationtype__c ), 
CONTAINS(&apos;User&apos;, br_relationtype__c )
) )</errorConditionFormula>
    <errorMessage>Only Lead, User are allowed</errorMessage>
</ValidationRule>