force-app/main/default/objects/PH_Contact__c/validationRules/Valid_WhatsappOptOut.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_WhatsappOptOut</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;true&apos;, LOWER(contact_whatsappoptout__c) ), 
CONTAINS(&apos;false&apos;, LOWER(contact_whatsappoptout__c) ), 
ISBLANK(contact_whatsappoptout__c) 
) )</errorConditionFormula>
    <errorMessage>Only True,False or blank are allowed</errorMessage>
</ValidationRule>